--- a/aoc-2024-solutions/day6.ipynb
+++ b/aoc-2024-solutions/day6.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -84,25 +84,23 @@
     "    input[pos_x][pos_y] = 'X'\n",
     "    height = len(input)\n",
     "    width = len(input[0])\n",
-    "    oob = False\n",
     "    count = 1\n",
-    "    while not oob:\n",
+    "    while pos_x in range(height) and pos_y in range(width):\n",
     "        dx, dy = Direction.get_direction(facing)\n",
-    "\n",
-    "        while input[pos_x][pos_y] != '#':\n",
-    "            if input[pos_x][pos_y] == '.':\n",
+    "        match input[pos_x][pos_y]:\n",
+    "            case '#':\n",
+    "                pos_x -= dx\n",
+    "                pos_y -= dy\n",
+    "                facing = Direction.rotate_clockwise(facing)\n",
+    "            case '.':\n",
     "                count += 1\n",
     "                input[pos_x][pos_y] = 'X'\n",
-    "\n",
-    "            pos_x += dx\n",
-    "            pos_y += dy\n",
-    "            if pos_x not in range(height) or pos_y not in range(width):\n",
-    "                oob = True\n",
-    "                break\n",
-    "        if oob: break\n",
-    "        pos_x -= dx\n",
-    "        pos_y -= dy\n",
-    "        facing = Direction.rotate_clockwise(facing)\n",
+    "                pos_x += dx\n",
+    "                pos_y += dy\n",
+    "            case 'X':\n",
+    "                pos_x += dx\n",
+    "                pos_y += dy\n",
+    "            \n",
     "    return count\n",
     "\n",
     "print(f\"p1: {part1(input)}\")"
