--- a/aoc-2024-solutions/day6.ipynb
+++ b/aoc-2024-solutions/day6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,21 +86,20 @@
     "    width = len(input[0])\n",
     "    count = 1\n",
     "    while pos_x in range(height) and pos_y in range(width):\n",
-    "        dx, dy = Direction.get_direction(facing)\n",
     "        match input[pos_x][pos_y]:\n",
-    "            case '#':\n",
+    "            case \"#\":\n",
     "                pos_x -= dx\n",
     "                pos_y -= dy\n",
     "                facing = Direction.rotate_clockwise(facing)\n",
     "            case '.':\n",
     "                count += 1\n",
     "                input[pos_x][pos_y] = 'X'\n",
-    "                pos_x += dx\n",
-    "                pos_y += dy\n",
     "            case 'X':\n",
-    "                pos_x += dx\n",
-    "                pos_y += dy\n",
-    "            \n",
+    "                pass\n",
+    "        dx, dy = Direction.get_direction(facing)\n",
+    "        pos_x += dx\n",
+    "        pos_y += dy\n",
+    "\n",
     "    return count\n",
     "\n",
     "print(f\"p1: {part1(input)}\")"
@@ -108,13 +107,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p2: 1888\n"
+     ]
+    }
+   ],
    "source": [
+    "def part2(og_input) -> int:\n",
+    "    start = find_guard(og_input)\n",
+    "    height = len(og_input)\n",
+    "    width = len(og_input[0])\n",
+    "    loop_obstacles = []\n",
+    "    for i in range(height):\n",
+    "        for j in range(width):\n",
+    "            if (i,j) == start: continue\n",
+    "            input = deepcopy(og_input)\n",
+    "            (pos_x, pos_y) = start\n",
+    "            input[pos_x][pos_y] = 'X'\n",
+    "            visited_dirs = [[[] for _ in range(width)] for _ in range(height)]\n",
+    "            visited_dirs[start[0]][start[1]].append(Direction.N)\n",
+    "            input[i][j] = '#'\n",
+    "            facing = Direction.N\n",
+    "            pos_x += (-1)\n",
+    "            while pos_x in range(height) and pos_y in range(width):\n",
+    "                match input[pos_x][pos_y]:\n",
+    "                    case \"#\":\n",
+    "                        pos_x -= dx\n",
+    "                        pos_y -= dy\n",
+    "                        facing = Direction.rotate_clockwise(facing)\n",
+    "                    case '.':\n",
+    "                        visited_dirs[pos_x][pos_y].append(facing)\n",
+    "                        input[pos_x][pos_y] = 'X'\n",
+    "                    case 'X':\n",
+    "                        if facing in visited_dirs[pos_x][pos_y]:\n",
+    "                            loop_obstacles.append((i,j))\n",
+    "                            break\n",
+    "                        visited_dirs[pos_x][pos_y].append(facing)\n",
+    "                dx, dy = Direction.get_direction(facing)\n",
+    "                pos_x += dx\n",
+    "                pos_y += dy\n",
+    "    return len(loop_obstacles)\n",
     "\n",
-    "def part2(input) -> int:\n",
-    "    pass"
+    "print(f\"p2: {part2(input)}\")"
    ]
   }
  ],
