only add/check obstacles along guards path

--- a/aoc-2024-solutions/day6.ipynb
+++ b/aoc-2024-solutions/day6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "\n",
     "# Read input\n",
     "input = list(map(list, open(\"../input/day6.txt\").readlines()))\n",
+    "\n",
     "\n",
     "#  cardinal direction enum\n",
     "class Direction:\n",
@@ -38,13 +39,13 @@
     "    @staticmethod\n",
     "    def get_direction_char(direction: int) -> str:\n",
     "        if direction == Direction.N:\n",
-    "            return 'N'\n",
+    "            return \"N\"\n",
     "        if direction == Direction.E:\n",
-    "            return 'E'\n",
+    "            return \"E\"\n",
     "        if direction == Direction.S:\n",
-    "            return 'S'\n",
+    "            return \"S\"\n",
     "        if direction == Direction.W:\n",
-    "            return 'W'\n",
+    "            return \"W\"\n",
     "\n",
     "    @staticmethod\n",
     "    def rotate_clockwise(direction: int) -> int:\n",
@@ -53,19 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_guard(strings):\n",
     "    for i, string in enumerate(strings):\n",
     "        for j, char in enumerate(string):\n",
-    "           if char == '^': return (i, j)\n"
+    "            if char == \"^\":\n",
+    "                return (i, j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +83,7 @@
     "    input = deepcopy(input)\n",
     "    facing = Direction.N\n",
     "    (pos_x, pos_y) = find_guard(input)\n",
-    "    input[pos_x][pos_y] = 'X'\n",
+    "    input[pos_x][pos_y] = \"X\"\n",
     "    height = len(input)\n",
     "    width = len(input[0])\n",
     "    count = 1\n",
@@ -91,23 +93,25 @@
     "                pos_x -= dx\n",
     "                pos_y -= dy\n",
     "                facing = Direction.rotate_clockwise(facing)\n",
-    "            case '.':\n",
+    "            case \".\":\n",
     "                count += 1\n",
-    "                input[pos_x][pos_y] = 'X'\n",
-    "            case 'X':\n",
+    "                input[pos_x][pos_y] = \"X\"\n",
+    "            case \"X\":\n",
     "                pass\n",
     "        dx, dy = Direction.get_direction(facing)\n",
     "        pos_x += dx\n",
     "        pos_y += dy\n",
+    "    visited = [[input[i][j] == \"X\" for j in range(width)] for i in range(height)]\n",
+    "    return count, visited\n",
     "\n",
-    "    return count\n",
     "\n",
-    "print(f\"p1: {part1(input)}\")"
+    "count, visited = part1(input)\n",
+    "print(f\"p1: {count}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -126,33 +130,35 @@
     "    loop_obstacles = []\n",
     "    for i in range(height):\n",
     "        for j in range(width):\n",
-    "            if (i,j) == start: continue\n",
+    "            if (i, j) == start or not visited[i][j] or og_input[i][j] == \"#\":\n",
+    "                continue\n",
     "            input = deepcopy(og_input)\n",
     "            (pos_x, pos_y) = start\n",
-    "            input[pos_x][pos_y] = 'X'\n",
+    "            input[pos_x][pos_y] = \"X\"\n",
     "            visited_dirs = [[[] for _ in range(width)] for _ in range(height)]\n",
     "            visited_dirs[start[0]][start[1]].append(Direction.N)\n",
-    "            input[i][j] = '#'\n",
+    "            input[i][j] = \"#\"\n",
     "            facing = Direction.N\n",
-    "            pos_x += (-1)\n",
+    "            pos_x += -1\n",
     "            while pos_x in range(height) and pos_y in range(width):\n",
     "                match input[pos_x][pos_y]:\n",
     "                    case \"#\":\n",
     "                        pos_x -= dx\n",
     "                        pos_y -= dy\n",
     "                        facing = Direction.rotate_clockwise(facing)\n",
-    "                    case '.':\n",
+    "                    case \".\":\n",
     "                        visited_dirs[pos_x][pos_y].append(facing)\n",
-    "                        input[pos_x][pos_y] = 'X'\n",
-    "                    case 'X':\n",
+    "                        input[pos_x][pos_y] = \"X\"\n",
+    "                    case \"X\":\n",
     "                        if facing in visited_dirs[pos_x][pos_y]:\n",
-    "                            loop_obstacles.append((i,j))\n",
+    "                            loop_obstacles.append((i, j))\n",
     "                            break\n",
     "                        visited_dirs[pos_x][pos_y].append(facing)\n",
     "                dx, dy = Direction.get_direction(facing)\n",
     "                pos_x += dx\n",
     "                pos_y += dy\n",
     "    return len(loop_obstacles)\n",
+    "\n",
     "\n",
     "print(f\"p2: {part2(input)}\")"
    ]
